修复spark运行问题